syntax = "proto3";

option java_multiple_files = true;
option java_package = "maxsimus.remotecam.remotecontrol";
option java_outer_classname = "RemoteCamProto";

package remotecam.remotecontrol;

service RemoteControl {
  rpc SetZoom (SettingValue) returns (Empty) {}
  rpc GetCameras (Empty) returns (CameraList) {}
  rpc SwitchCamera (CameraId) returns (Empty) {}
  rpc SetResolution (Size) returns (Empty) {}
}

message CameraId {
  string id = 1;
}

message CameraList {
  repeated CameraInfo cameras = 1;
}

message CameraInfo {
  string id = 1;
  repeated Size resolutions = 2;
}

message Size {
  int32 width = 1;
  int32 height = 2;
}

message SettingValue {
  float value = 1;
}

message Empty {

}